test/corpus/lines.txt
================================================================================
Tags line
================================================================================

% git code

--------------------------------------------------------------------------------

(source_file
  (tags
    marker: (marker)
    (tag)
    (tag)))

================================================================================
Comment line
================================================================================

; this is a comment line, ignored by navi

--------------------------------------------------------------------------------

(source_file
  (comment
    marker: (marker)
    (text)))

================================================================================
Description (snippet header)
================================================================================

# Change branch

--------------------------------------------------------------------------------

(source_file
  (description
    marker: (marker)
    (text)))

================================================================================
Authorship metadata
================================================================================

@ denisidoro

--------------------------------------------------------------------------------

(source_file
  (authorship
    marker: (marker)
    (text)))

================================================================================
Command with a placeholder
================================================================================

git checkout <branch>

--------------------------------------------------------------------------------

(source_file
  (command
    (command_text)
    (placeholder
      (var_ref))))

================================================================================
Command with placeholder in the middle
================================================================================

git push origin <current_branch> --force

--------------------------------------------------------------------------------

(source_file
  (command
    (command_text)
    (placeholder
      (var_ref))
    (command_text)))

================================================================================
Variable: name and command
================================================================================

$ branch: git branch | awk '{print $2}'

--------------------------------------------------------------------------------

(source_file
  (variable
    marker: (marker)
    name: (var_name)
    command: (var_command)))

================================================================================
Variable with options after ---
================================================================================

$ remote: git remote --- --multi

--------------------------------------------------------------------------------

(source_file
  (variable
    marker: (marker)
    name: (var_name)
    command: (var_command)
    options: (var_options)))

================================================================================
Multiple line types together
================================================================================

% git code

# Change branch
git checkout <branch>

; trailing comment
@ denisidoro

--------------------------------------------------------------------------------

(source_file
  (tags
    marker: (marker)
    (tag)
    (tag))
  (description
    marker: (marker)
    (text))
  (command
    (command_text)
    (placeholder
      (var_ref)))
  (comment
    marker: (marker)
    (text))
  (authorship
    marker: (marker)
    (text)))
